--- a/camel-springboot-rest/.project
+++ b/camel-springboot-rest/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>yourspace-hello</name>
+	<name>camel-springboot-rest</name>
 	<comment></comment>
 	<projects>
 	</projects>
